# src/app.ts
@@ -8,7 +8,7 @@ import { signoutRouter } from "./routes/signout/signout";
 import { signinRouter } from "./routes/signin/signin";
 import cookieParser from "cookie-parser";
 import swaggerUi from 'swagger-ui-express'
-import swaggerFile from './swagger/swagger-release.json'
+import YAML from 'yamljs';
 import { settingsRouter } from "./routes/settings/settings";
 import { adminSettingsRouter } from "./routes/admin-settings";
 import { usersRouter } from "./routes/users";
@@ -16,6 +16,8 @@ import path from "path";
 import { tokenRouter } from "./routes/token/token";
 import { httpLogMiddleware } from "./middlewares/http-log-middleware";
 import { signupRouter } from "./routes/signup";
+import { clickdeskDoctorRouter } from "./routes/clickdesk/doctor/desk_doctor";
+import { clickdeskReasonRouter } from "./routes/clickdesk/reason/desk_reason";
 
 const app = express();
 
@@ -46,7 +48,8 @@ app.use(
     secure: process.env.NODE_ENV === "production",
   })
 );
-app.use("/api/swagger", swaggerUi.serve, swaggerUi.setup(swaggerFile));
+const swaggerSpec = YAML.load(path.join(__dirname, './swagger/swagger.yaml'))
+app.use("/api/swagger", swaggerUi.serve, swaggerUi.setup(swaggerSpec));
 app.use("/api/signin", signinRouter);
 app.use("/api/signup", signupRouter);
 app.use("/api/signout", signoutRouter);
@@ -55,7 +58,8 @@ app.use("/api/token", tokenRouter);
 app.use("/api/settings", settingsRouter);
 app.use("/api/admin-settings", adminSettingsRouter);
 app.use("/api/currentuser", currentUserRouter);
-
+app.use("/api/clickdesk/doctor", clickdeskDoctorRouter);
+app.use("/api/clickdesk/reason", clickdeskReasonRouter);
 app.use(errorHandler);
 
 export { app };
